tests/snapshots/snapshots__budget_ts_pattern_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1984 words)

README.md
    40→## About …
    48→## Features …
    59→## What is Pattern Matching? …
    67→## Installation …
    87→## Want to become a TypeScript Expert? …
    91→# Documentation
    93→- [Sandbox examples](#sandbox-examples)
    94→- [Getting Started](#getting-started)
    95→- [API Reference](#api-reference)
    96→  - [`match`](#match)
    97→  - [`.with`](#with)
    98→  - [`.when`](#when)
    99→  - [`.returnType`](#returntype)
   100→  - [`.exhaustive`](#exhaustive)
   101→  - [`.otherwise`](#otherwise)
   102→  - [`.narrow`](#narrow)
   103→  - [`isMatching`](#ismatching)
   104→  - [Patterns](#patterns)
   105→    - [Literals](#literals)
   106→    - [Wildcards](#wildcards)
   107→    - [Objects](#objects)
   108→    - [Tuples (arrays)](#tuples-arrays)
   109→    - [`P.array` patterns](#parray-patterns)
   110→    - [`P.record` patterns](#precord-patterns)
   111→    - [`P.set`](#pset-patterns)
   112→    - [`P.map`](#pmap-patterns)
   113→    - [`P.when` patterns](#pwhen-patterns)
   114→    - [`P.not` patterns](#pnot-patterns)
   115→    - [`P.select` patterns](#pselect-patterns)
   116→    - [`P.optional` patterns](#poptional-patterns)
   117→    - [`P.instanceOf` patterns](#pinstanceof-patterns)
   118→    - [`P.union` patterns](#punion-patterns)
   119→    - [`P.intersection` patterns](#pintersection-patterns)
   120→    - [`P.string` predicates](#pstring-predicates)
   121→    - [`P.number` and `P.bigint` predicates](#pnumber-and-pbigint-predicates)
   122→  - [Types](#types)
   123→    - [`P.infer`](#pinfer)
   124→    - [`P.Pattern`](#pPattern)
   125→    - [Type inference](#type-inference)
   126→- [Inspirations](#inspirations)
   127→
   128→## Sandbox examples …
   139→## Getting Started …
   415→## API Reference …
   417→### `match`
   419→```ts
   420→match(value);
   421→```
   422→
   423→Create a `Match` object on which you can later call `.with`, `.when`, `.otherwise` and `.run`.
   424→
   742→## Patterns …
   857→#### `P._` wildcard
   859→The `P._` pattern will match any value. You can also use `P.any`, which is an alias to `P._`.
   860→
   861→```ts
   862→import { match, P } from 'ts-pattern';
   863→
   864→const input = 'hello';
   865→
   866→const output = match(input)
   867→  .with(P._, () => 'It will always match')
   868→  // OR
   869→  .with(P.any, () => 'It will always match')
   870→  .otherwise(() => 'This string will never be used');
   871→
   872→console.log(output);
   873→// => 'It will always match'
   874→```
   875→
  1405→## `P.string` predicates …
  1500→## `P.number` and `P.bigint` predicates …
  1621→## Types …
  1623→### `P.infer`
  1625→`P.infer<typeof somePattern>` lets you infer a type of value from a type of pattern.
  1626→
  1627→It's particularly useful when validating an API response.
  1628→
  1629→```ts
  1630→const postPattern = {
  1631→  title: P.string,
  1632→  content: P.string,
  1633→  stars: P.number.between(1, 5).optional(),
  1634→  author: {
  1635→    firstName: P.string,
  1636→    lastName: P.string.optional(),
  1637→    followerCount: P.number,
  1638→  },
  1639→} as const;
  1640→
  1641→type Post = P.infer<typeof postPattern>;
  1642→
  1643→// posts: Post[]
  1644→const posts = await fetch(someUrl)
  1645→  .then((res) => res.json())
  1646→  .then((res: unknown): Post[] =>
  1647→    isMatching({ data: P.array(postPattern) }, res) ? res.data : []
  1648→  );
  1649→```
  1650→
      →…
  1766→## Inspirations …
benchmarks/always-last-digit.ts
     4→type Digit …
benchmarks/nested-objects.ts
benchmarks/random-digit.ts
     4→type Digit …
docs/roadmap.md
docs/v3-to-v4-migration-guide.md
     1→# TS-Pattern v3 to v4 Migration Guide
     3→## Breaking changes
     5→### Imports
     7→type-specific wildcard patterns have moved from `__.<pattern>` to a new `Pattern` qualified module, also exported as `P` by ts-pattern.
     8→
     9→```diff
    10→- import { match, __ } from 'ts-pattern';
    11→+ import { match, Pattern } from 'ts-pattern';
    12→
    13→
    14→const toString = (value: string | number) =>
    15→  match(value)
    16→-   .with(__.string, (v) => v)
    17→-   .with(__.number, (v) => `${v}`)
    18→+   .with(Pattern.string, (v) => v)
    19→+   .with(Pattern.number, (v) => `${v}`)
    20→    .exhaustive();
    21→```
    22→
    23→or
    24→
    25→```diff
      →…
    39→#### `__` …
    57→#### `select()`, `not()`, `when()` …
    79→#### `Pattern` type …
   122→## New features …
   128→#### `P.array(pattern)` …
   159→#### `P.optional(pattern)` …
   201→#### `P.union(...patterns)` …
   234→#### `P.intersection(...patterns)` …
   298→#### `P.infer<typeof pattern>` …
   336→#### `P.symbol` …
   346→#### `P.bigint` …
docs/v4-to-v5-migration-guide.md
     1→# TS-Pattern v4 to v5 Migration Guide
     3→This file contains all breaking changes and new features between the version 4 and 5 of TS-Pattern.
     4→
     5→# Breaking changes
     7→## TypeScript v5
     9→Because it relies on [const type parameters](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-5-0.html#const-type-parameters), TS-Pattern v5 requires TypeScript v5+!
    10→
    11→## `.with` is now evaluated eagerly …
    42→## Matching on Map and Sets …
    63→# New features
    65→## chainable methods
    67→TS-Pattern v5's major addition is the ability to chain methods to narrow down the values matched by primitive patterns, like `P.string` or `P.number`.
    68→
    69→Since a few examples is worth a thousand words, here are a few ways you can use chainable methods:
    70→
   156→## Variadic tuple patterns …
   214→## `.returnType` …
examples/gif-fetcher/src/App.tsx
    42→const reducer …
    75→export default function App() {
examples/gif-fetcher/src/constants.ts
     1→export const API_KEY = 'xxxxxxxxxxxxxxxx';
examples/gif-fetcher/src/index.tsx
     6→const rootElement = document.getElementById('root');
examples/gif-fetcher/src/searchGif.ts
     4→const delay …
     6→export function searchGif(query: string) {
     7→  return fetch(
      →…
examples/one-file-demo/one-file-demo.ts
    79→const example3 …
src/errors.ts
     1→/**
     2→ * Error when the given input value does not match any included pattern
     3→ * and .exhaustive() was specified
     4→ */
     5→export class NonExhaustiveError extends Error {
     6→  constructor …
src/index.ts
src/internals/helpers.ts
     7→import * as symbols from './symbols';
     8→import { SelectionType } from '../types/FindSelected';
     9→import { Pattern, Matcher, MatcherType, AnyMatcher } from '../types/Pattern';
    12→export const isObject = (value: unknown): value is Object =>
    13→  Boolean(value && typeof value === 'object');
    16→export const isMatcher = (
    17→  x: unknown
    18→): x is Matcher<unknown, unknown, MatcherType, SelectionType> => {
    19→  const pattern = x as Matcher<unknown, unknown, MatcherType, SelectionType>;
      →…
    24→const isOptionalPattern = (
    25→  x: unknown
    26→): x is Matcher<unknown, unknown, 'optional', SelectionType> => {
    27→  return isMatcher(x) && x[symbols.matcher]().matcherType === 'optional';
    28→};
    32→export const matchPattern = (
    33→  pattern: any,
    34→  value: any,
    35→  select: (key: string, value: unknown) => void
    36→): boolean => {
    37→  if (isMatcher(pattern)) {
      →…
   120→export const getSelectionKeys = (pattern: any): string[] => {
   121→  if (isObject(pattern)) {
      →…
   132→export const flatMap = <a, b>(
   133→  xs: readonly a[],
   134→  f: (v: a) => readonly b[]
   135→): b[] => xs.reduce<b[]>((acc, x) => acc.concat(f(x)), []);
src/internals/symbols.ts
     1→/**
     2→ * Symbols used internally within ts-pattern to construct and discriminate
     3→ * Guard, Not, and Select, and AnonymousSelect patterns
     4→ *
     5→ * Symbols have the advantage of not appearing in auto-complete suggestions in
     6→ * user defined patterns, and eliminate the risk of property
     7→ * overlap between ts-pattern internals and user defined patterns.
     8→ *
     9→ * These symbols have to be visible to tsc for type inference to work, but
    10→ * users should not import them
    11→ * @module
    12→ * @private
    13→ * @internal
    14→ */
    15→
    16→export const matcher = Symbol.for('@ts-pattern/matcher');
    17→export type matcher = typeof matcher;
    19→export const unset = Symbol.for('@ts-pattern/unset');
    20→export type unset = typeof unset;
    22→export const isVariadic = Symbol.for('@ts-pattern/isVariadic');
    23→export type isVariadic = typeof isVariadic;
    26→export const anonymousSelectKey = '@ts-pattern/anonymous-select-key';
    27→export type anonymousSelectKey = typeof anonymousSelectKey;
    29→export const override = Symbol.for('@ts-pattern/override');
    30→export type override = typeof override;
src/is-matching.ts
     6→/**
     7→ * This constraint allows using additional properties
     8→ * in object patterns. See "should allow targetting unknown properties"
     9→ * unit test in `is-matching.test.ts`.
    10→ */
    11→type PatternConstraint<T> = T extends readonly any[]
    12→  ? P.Pattern<T>
    13→  : T extends object
    14→  ? P.Pattern<T> & UnknownProperties
    15→  : P.Pattern<T>;
    53→export function isMatching …
src/match.ts
     7→type MatchState …
    11→const unmatched …
    16→/**
      →…
    32→export function match<const input, output = symbols.unset>(
    33→  value: input
    34→): Match<input, output> {
    38→/**
    39→ * This class represents a match expression. It follows the
      →…
    47→class MatchExpression<input, output> {
    48→  constructor …
    50→  with …
    94→  when …
   110→  otherwise …
   115→  exhaustive …
   120→  run …
   124→  returnType …
   128→  narrow …
src/patterns.ts
     8→import { matchPattern, getSelectionKeys, flatMap } from './internals/helpers';
    67→/**
      →…
    81→export type unstable_Matchable<
    82→  narrowedOrFn,
    83→  input = unknown,
    84→  pattern = never
    85→> = CustomP<input, pattern, narrowedOrFn>;
    87→/**
      →…
   100→export type unstable_Matcher<
   101→  narrowedOrFn,
   102→  input = unknown,
   103→  pattern = never
   104→> = ReturnType<CustomP<input, pattern, narrowedOrFn>[matcher]>;
   106→/**
      →…
   116→export type infer<pattern> = InvertPattern<NoInfer<pattern>, unknown>;
   118→/**
      →…
   131→export type narrow<input, pattern> = ExtractPreciseValue<
   132→  input,
   133→  InvertPattern<pattern, input>
   134→>;
   177→/**
      →…
   187→export function optional<
   188→  input,
   189→  const pattern extends unknown extends input
   190→    ? UnknownValuePattern
   191→    : Pattern<input>
   192→>(pattern: pattern): Chainable<OptionalP<input, pattern>, 'optional'> {
   217→type UnwrapArray …
   219→type UnwrapSet …
   221→type UnwrapMapKey …
   223→type UnwrapMapValue …
   225→type UnwrapRecordKey …
   227→type UnwrapRecordValue …
   229→type WithDefault …
   246→export function array …
   299→export function set …
   362→export function map …
   445→export function record …
   517→/**
      →…
   536→export function intersection<
   537→  input,
   538→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   539→>(...patterns: patterns): Chainable<AndP<input, patterns>> {
   559→/**
      →…
   572→export function union<
   573→  input,
   574→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   575→>(...patterns: patterns): Chainable<OrP<input, patterns>> {
   599→/**
      →…
   611→export function not<
   612→  input,
   613→  const pattern extends Pattern<input> | UnknownValuePattern
   614→>(pattern: pattern): Chainable<NotP<input, pattern>> {
   646→export function when …
   696→export function select …
   766→type AnyConstructor …
   773→/**
      →…
   782→export const any: UnknownPattern = chainable(when(isUnknown));
   784→/**
      →…
   793→export const unknown: UnknownPattern = chainable(when(isUnknown));
   795→/**
      →…
   805→export const _ = any;
   919→/**
      →…
   928→export const string: StringPattern = stringChainable(when(isString));
  1066→/**
      →…
  1075→export const number: NumberPattern = numberChainable(when(isNumber));
  1193→/**
      →…
  1201→export const bigint: BigIntPattern = bigintChainable(when(isBigInt));
  1203→/**
      →…
  1211→export const boolean: BooleanPattern = chainable(when(isBoolean));
  1213→/**
      →…
  1221→export const symbol: SymbolPattern = chainable(when(isSymbol));
  1223→/**
      →…
  1231→export const nullish: NullishPattern = chainable(when(isNullish));
  1233→/**
      →…
  1241→export const nonNullable: NonNullablePattern = chainable(when(isNonNullable));
  1243→/**
      →…
  1251→export function instanceOf<T extends AnyConstructor>(
  1252→  classConstructor: T
  1253→): Chainable<GuardP<unknown, InstanceType<T>>> {
  1274→export function shape …
src/types/BuildMany.ts
src/types/DeepExclude.ts
src/types/DistributeUnions.ts
    17→/**
      →…
    41→export type DistributeMatchingUnions<a, p> = IsAny<a> extends true
    42→  ? any
    43→  : BuildMany<a, Distribute<FindUnionsMany<a, p>>>;
    62→/**
      →…
    80→export type FindUnions<
    81→  a,
    82→  p,
    83→  path extends PropertyKey[] = []
    84→> = unknown extends p
    85→  ? []
    86→  : IsAny<p> extends true
    87→  ? [] // Don't try to find unions after 5 levels
    88→  : Length<path> extends 5
    89→  ? []
    90→  : IsUnion<a> extends true
    91→  ? [
    92→      {
src/types/ExtractPreciseValue.ts
src/types/FindSelected.ts
src/types/InvertPattern.ts
   101→/**
      →…
   106→export type InvertPattern<p, input> = Equal<Pattern<input>, p> extends true
   107→  ? never
   108→  : InvertPatternInternal<p, input>;
   300→/**
      →…
   303→export type InvertPatternForExclude<p, i> = Equal<Pattern<i>, p> extends true
   304→  ? never
   305→  : InvertPatternForExcludeInternal<p, i>;
src/types/IsMatching.ts
src/types/Match.ts
    10→interface NonExhaustiveError<i> {
    11→  __nonExhaustive: never;
    12→}
    14→interface TSPatternError<i> {
    15→  __nonExhaustive: never;
    16→}
    18→/**
      →…
    22→export type Match<
    23→  i,
    24→  o,
    25→  handledCases extends any[] = [],
    26→  inferredOutput = never
    27→> = {
   132→  with …
   159→  when …
   180→  otherwise …
   205→  run …
   225→  narrow …
   228→/**
   229→ * Potential for optimization here:
      →…
   245→type DeepExcludeAll<a, tupleList extends any[]> = [a] extends [never]
   246→  ? never
   247→  : tupleList extends [infer excluded, ...infer tail]
   248→  ? DeepExcludeAll<DeepExclude<a, excluded>, tail>
   249→  : a;
   255→/**
   256→ * The type of an overloaded function for `.exhaustive`,
      →…
   261→type Exhaustive<output, inferredOutput> = {
src/types/Pattern.ts
    43→/**
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
    46→ * which returns an object with a `match()` method, taking
    47→ * the input value and returning whether the pattern matches
    48→ * or not, along with optional selections.
    49→ */
    50→export interface Matcher<
    51→  input,
    52→  narrowed,
    53→  // Type of what this pattern selected from the input
    54→  matcherType extends MatcherType = 'default',
    55→  selections extends SelectionType = None,
    56→  // Type to exclude from the input union because
    57→  // it has been fully matched by this pattern
    58→  excluded = narrowed
    59→> {
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    67→  // only used for array matchers
    68→  [symbols.isVariadic]?: boolean;
    69→}
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   146→/**
      →…
   157→export type Pattern<a = unknown> = unknown extends a
   158→  ? UnknownValuePattern
   159→  : KnownPattern<a>;
   223→      optional …
   237→      and …
   253→      or …
   269→      select …
   291→      startsWith …
   306→      endsWith …
   321→      minLength …
   336→      length …
   351→      maxLength …
   366→      includes …
   381→      regex …
   407→      between …
   423→      lt …
   438→      gt …
   453→      lte …
   468→      gte …
   483→      int …
   496→      finite …
   509→      positive …
   522→      negative …
   546→      between …
   562→      lt …
   577→      gt …
   592→      lte …
   607→      gte …
   622→      positive …
   635→      negative …
   661→      optional …
   678→      select …
src/types/helpers.ts
     5→/**
      →…
    14→export type LeastUpperBound<a, b> = b extends a ? b : a extends b ? a : never;
   179→/**
      →…
   182→export type GuardValue<fn> = fn extends (value: any) => value is infer b
   183→  ? b
   184→  : fn extends (value: infer a) => unknown
   185→  ? a
   186→  : never;
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}
tests/instance-of.test.ts
     4→class A {
     7→class B {
tests/types-catalog/definition.ts
tests/types-catalog/utils.ts
     4→export const some = <a>(value: a): Option<a> => ({
     5→  kind: 'some',
     6→  value,
     7→});
