tests/snapshots/snapshots__budget_ts_pattern_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4013 tokens)

README.md
    40→## About
    48→## Features
    59→## What is Pattern Matching?
    67→## Installation
    87→## Want to become a TypeScript Expert?
    91→# Documentation
    93→- [Sandbox examples](#sandbox-examples)
    94→- [Getting Started](#getting-started)
    95→- [API Reference](#api-reference)
    96→  - [`match`](#match)
      →  …
   128→## Sandbox examples
   139→## Getting Started
   415→## API Reference
   742→## Patterns
  1405→## `P.string` predicates
  1500→## `P.number` and `P.bigint` predicates
  1621→## Types
  1766→## Inspirations

benchmarks/always-last-digit.ts
     2→import { match } from '../src';

benchmarks/package.json

benchmarks/random-digit.ts
     2→import { match } from '../src';

docs/v3-to-v4-migration-guide.md
     1→# TS-Pattern v3 to v4 Migration Guide
     3→## Breaking changes
   122→## New features

examples/gif-fetcher/src/App.tsx
    42→const reducer …
    75→export default function App() {

examples/gif-fetcher/src/constants.ts
     1→export const API_KEY = 'xxxxxxxxxxxxxxxx';

examples/gif-fetcher/src/searchGif.ts
     6→export function searchGif(query: string) {

jsr.json
     2→  "name": "@gabriel/ts-pattern",
     3→  "version": "5.9.0",
     4→  "exports": {
     8→  }
     9→}

package.json

src/errors.ts
     2→ * Error when the given input value does not match any included pattern
     3→ * and .exhaustive() was specified
     5→export class NonExhaustiveError extends Error {
     6→  constructor(public input: unknown) {
     7→    let displayedValue;
     8→    try {
      →    …

src/index.ts
     1→import * as Pattern from './patterns';

src/internals/helpers.ts
     7→import * as symbols from './symbols';
     8→import { SelectionType } from '../types/FindSelected';
     9→import { Pattern, Matcher, MatcherType, AnyMatcher } from '../types/Pattern';
    12→export const isObject …
    16→export const isMatcher …
    24→const isOptionalPattern …
    32→export const matchPattern …
   120→export const getSelectionKeys …
   132→export const flatMap …

src/internals/symbols.ts
     2→ * Symbols used internally within ts-pattern to construct and discriminate
     3→ * Guard, Not, and Select, and AnonymousSelect patterns
     4→ *
     5→ * Symbols have the advantage of not appearing in auto-complete suggestions in
     6→ * user defined patterns, and eliminate the risk of property
     7→ * overlap between ts-pattern internals and user defined patterns.
     8→ *
     9→ * These symbols have to be visible to tsc for type inference to work, but
    10→ * users should not import them
    11→ * @module
    12→ * @private
    13→ * @internal
    16→export const matcher = Symbol.for('@ts-pattern/matcher');
    17→export type matcher = typeof matcher;
    19→export const unset = Symbol.for('@ts-pattern/unset');
    20→export type unset = typeof unset;
    22→export const isVariadic = Symbol.for('@ts-pattern/isVariadic');
    23→export type isVariadic = typeof isVariadic;
    26→export const anonymousSelectKey = '@ts-pattern/anonymous-select-key';
    27→export type anonymousSelectKey = typeof anonymousSelectKey;
    29→export const override = Symbol.for('@ts-pattern/override');
    30→export type override = typeof override;

src/is-matching.ts
     1→import { MatchedValue, Pattern, UnknownProperties } from './types/Pattern';
     2→import * as P from './patterns';
     3→import { matchPattern } from './internals/helpers';
     4→import { WithDefault } from './types/helpers';
    11→type PatternConstraint<T> = T extends readonly any[]
    12→  ? P.Pattern<T>
    13→  : T extends object
    14→  ? P.Pattern<T> & UnknownProperties
    15→  : P.Pattern<T>;
    53→export function isMatching<const p extends Pattern<any>>(
    54→  ...args: [pattern: p, value?: any]
    55→): boolean | ((vale: any) => boolean) {
    56→  if (args.length === 1) {
    57→    const [pattern] = args;
      →    …

src/match.ts
     1→import { Pattern } from './types/Pattern';
     2→import { Match } from './types/Match';
     3→import * as symbols from './internals/symbols';
     4→import { matchPattern } from './internals/helpers';
     5→import { NonExhaustiveError } from './errors';
     7→type MatchState …
    11→const unmatched …
    17→ * `match` creates a **pattern matching expression**.
    18→ *  * Use `.with(pattern, handler)` to pattern match on the input.
    19→ *  * Use `.exhaustive()` or `.otherwise(() => defaultValue)` to end the expression and get the result.
    20→ *
    21→ * [Read the documentation for `match` on GitHub](https://github.com/gvergnaud/ts-pattern#match)
    22→ *
    23→ * @example
    24→ *  declare let input: "A" | "B";
    25→ *
    26→ *  return match(input)
    27→ *    .with("A", () => "It's an A!")
    28→ *    .with("B", () => "It's a B!")
    29→ *    .exhaustive();
    30→ *
    32→export function match<const input, output = symbols.unset>(
    33→  value: input
    34→): Match<input, output> {
    35→  return new MatchExpression(value, unmatched) as any;
    36→}
    47→class MatchExpression<input, output> {
    48→  constructor …
    50→  with …
    94→  when …
   110→  otherwise …
   115→  exhaustive …
   120→  run …
   124→  returnType …
   128→  narrow …
   133→function defaultCatcher(input: unknown): never {

src/patterns.ts
     8→import { matchPattern, getSelectionKeys, flatMap } from './internals/helpers';
    81→export type unstable_Matchable …
   100→export type unstable_Matcher …
   116→export type infer …
   131→export type narrow …
   187→export function optional …
   246→export function array …
   299→export function set …
   362→export function map …
   445→export function record …
   536→export function intersection …
   572→export function union …
   611→export function not …
   646→export function when …
   696→export function select …
   782→export const any …
   793→export const unknown …
   805→export const _ …
   928→export const string …
  1075→export const number …
  1201→export const bigint …
  1211→export const boolean …
  1221→export const symbol …
  1231→export const nullish …
  1241→export const nonNullable …
  1251→export function instanceOf …
  1274→export function shape …

src/types/BuildMany.ts
     1→import { Iterator, IsOptionalKeysOf, UpdateAt, ValueOf } from './helpers';
     4→export type BuildMany …
    11→type BuildOne …
    19→export type SetDeep …

src/types/DeepExclude.ts
     1→import { DistributeMatchingUnions } from './DistributeUnions';
     3→export type DeepExclude<a, b> = Exclude<DistributeMatchingUnions<a, b>, b>;

src/types/DistributeUnions.ts
     1→import { BuildMany } from './BuildMany …
     2→import type { …
    15→import { IsMatching } from './IsMatching …
    18→ * DistributeMatchingUnions takes two arguments:
    19→ * - a data structure of type `a` containing unions
    20→ * - a pattern `p`, matching this data structure
    21→ * and turns it into a union of all possible
      → …
    41→export type DistributeMatchingUnions<a, p> = IsAny<a> extends true
    42→  ? any
    43→  : BuildMany<a, Distribute<FindUnionsMany<a, p>>>;
    46→export type FindUnionsMany …
    63→ * The reason we don't look further down the tree with lists,
    64→ * Set and Maps is that they can be heterogeneous,
    65→ * so matching on a A[] for a in input of (A|B)[]
    66→ * doesn't rule anything out. You can still have
      → …
    80→export type FindUnions<
    81→  a,
    82→  p,
    83→  path extends PropertyKey[] = []
    84→> = unknown extends p
    85→  ? []
    86→  : IsAny<p> extends true
    87→  ? [] // Don't try to find unions after 5 levels
    88→  : Length<path> extends 5
    89→  ? []
    90→  : IsUnion<a> extends true
    91→  ? [
    92→      {
   174→export type ArrayToVariadicUnion …
   183→export type Distribute …

src/types/ExtractPreciseValue.ts
     1→import type { Override } from './Pattern …
     2→import type { …
    13→export type ExtractPreciseValue …
    81→type ExtractPreciseArrayValue …

src/types/FindSelected.ts
     1→import type * as symbols from '../internals/symbols …
     2→import type { AnyMatcher, Matcher, Pattern } from './Pattern …
     3→import type { …
    13→export type None …
    16→export type Some …
    21→export type SelectionType …
    96→export type FindSelectionUnion …
   159→export type SeveralAnonymousSelectError …
   165→export type MixedNamedAndAnonymousSelectError …
   174→export type SelectionToArgs …
   185→export type Selections …
   191→export type FindSelected …

src/types/InvertPattern.ts
     1→import { DeepExclude } from './DeepExclude …
     2→import { …
    27→import type { Matcher, Pattern, Override, AnyMatcher } from './Pattern …
   102→ * ### InvertPatternInternal
   103→ * Since patterns have special wildcard values, we need a way
   104→ * to transform a pattern into the type of value it represents
   106→export type InvertPattern<p, input> = Equal<Pattern<input>, p> extends true
   107→  ? never
   108→  : InvertPatternInternal<p, input>;
   180→export type ReduceIntersectionForExclude …
   192→export type ReduceUnionForExclude …
   301→ * ### InvertPatternForExclude
   303→export type InvertPatternForExclude<p, i> = Equal<Pattern<i>, p> extends true
   304→  ? never
   305→  : InvertPatternForExcludeInternal<p, i>;

src/types/IsMatching.ts
     1→import { …
    12→type IsMatchingTuple …
    26→type IsMatchingArray …
    57→export type IsMatching …

src/types/Match.ts
     8→export type PickReturnValue<a, b> = a extends symbols.unset ? b : a;
    10→interface NonExhaustiveError<i> {
    14→interface TSPatternError<i> {
    19→ * #### Match
    20→ * An interface to create a pattern matching clause.
    22→export type Match<
    23→  i,
    24→  o,
    25→  handledCases extends any[] = [],
    26→  inferredOutput = never
    27→> = {
    28→  /**
   132→  with …
   159→  when …
   180→  otherwise …
   205→  run …
   225→  narrow …
   245→type DeepExcludeAll …
   251→type MakeTuples<ps extends readonly any[], value> = {
   261→type Exhaustive …

src/types/Pattern.ts
     1→import type * as symbols from '../internals/symbols';
     2→import { MergeUnion, Primitives, WithDefault } from './helpers';
     3→import { None, Some, SelectionType } from './FindSelected';
     4→import { matcher } from '../patterns';
     5→import { ExtractPreciseValue } from './ExtractPreciseValue';
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
    46→ * which returns an object with a `match()` method, taking
    47→ * the input value and returning whether the pattern matches
    48→ * or not, along with optional selections.
    50→export interface Matcher<
    51→  input,
    52→  narrowed,
    53→  // Type of what this pattern selected from the input
    54→  matcherType extends MatcherType = 'default',
    55→  selections extends SelectionType = None,
    56→  // Type to exclude from the input union because
    57→  // it has been fully matched by this pattern
    58→  excluded = narrowed
    59→> {
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    67→  // only used for array matchers
    68→  [symbols.isVariadic]?: boolean;
    69→}
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   147→ * `Pattern<a>` is the generic type for patterns matching a value of type `a`. A pattern can be any (nested) javascript value.
   148→ *
   149→ * They can also be wildcards, like `P._`, `P.string`, `P.number`,
   150→ * or other matchers, like `P.when(predicate)`, `P.not(pattern)`, etc.
   151→ *
   152→ * [Read the documentation for `P.Pattern` on GitHub](https://github.com/gvergnaud/ts-pattern#patterns)
   153→ *
   154→ * @example
      → …
   157→export type Pattern<a = unknown> = unknown extends a
   158→  ? UnknownValuePattern
   159→  : KnownPattern<a>;
   269→      select<input, k extends string>(
   270→        key: k
   271→      ): Chainable<SelectP<k, input, p>, omitted | 'select' | 'or' | 'and'>;
   678→      select<input, k extends string>(
   679→        key: k
   680→      ): ArrayChainable<SelectP<k, input, pattern>, omitted | 'select'>;

src/types/helpers.ts
     6→ * ### LeastUpperBound
     7→ * An interesting one. A type taking two imbricated sets and returning the
     8→ * smallest one.
     9→ * We need that because sometimes the pattern's inferred type holds more
    10→ * information than the value on which we are matching (if the value is any
    11→ * or unknown for instance).
    14→export type LeastUpperBound<a, b> = b extends a ? b : a extends b ? a : never;
   180→ * GuardValue returns the value guarded by a type guard function.
   182→export type GuardValue<fn> = fn extends (value: any) => value is infer b
   183→  ? b
   184→  : fn extends (value: infer a) => unknown
   185→  ? a
   186→  : never;
   204→type AllKeys<a> = a extends any ? keyof a : never;
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}

tests/helpers.test.ts
     1→import { …

tests/otherwise.test.ts
     1→import { match } from '../src';

tests/types-catalog/definition.ts
   585→export type Definition …

tests/types-catalog/utils.ts
     4→export const some …

tsconfig.json
     2→  "compilerOptions": {
    11→  },
    12→  "include": ["src/"],
    13→  "exclude": ["tests/", "dist/", "examples/", "node_modules/"]
    14→}
